Fix veritical spacing on token form (#1480)

--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -177,10 +177,24 @@
 
 .settings-two-factor {
   p {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
   }
   .form-flash-message {
     display: none;
+  }
+  label {
+    margin-bottom: 8px;
+  }
+  ol {
+    margin-bottom: 0;
+  }
+  .settings-new-pin, .settings-reset-pin {
+    ol li:first-child {
+      margin-bottom: 20px;
+    }
+  }
+  .settings-resynchronize-token fieldset:first-child {
+      margin-top: 15px;
   }
 }
 
